<resources>
    <string name="app_name">TLL Player</string>
    <string name="title_channel_reversal">Channel Reversal</string>
    <string name="title_channel_num">Show number during switch</string>
    <string name="check_version">Update app</string>
    <string name="title_boot_startup">Automatic startup</string>
    <string name="appreciate">Buy me a coffee</string>
    <string name="channels">Configuring Addresses</string>
    <string name="channel">Default Channel</string>
    <string name="title_time">Display time</string>
    <string name="title_config_auto_load">Auto-update video source on startup</string>
    <string name="exit">Exit the app</string>
    <string name="default_channel">Default channel number</string>
    <string name="clear">Restore Defaults</string>
    <string name="server">Network Configuration</string>
    <string name="title_channel_check">Remove dead channels</string>
    <string name="title_watch_last">Play last channel on startup</string>
    <string name="title_force_high_quality">Force High Video Quality</string>
    <string name="channels_in_category">Channels in selected category</string>
    <string name="channels_in_category_with_name">Channels in %1$s</string>
    <string name="favorites">Favorites</string>
</resources>