<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PREFERENCES"
        android:textSize="@dimen/settings_section_title_size"
        android:textColor="@color/accent_blue"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/tv_item_spacing"
        android:fontFamily="sans-serif-medium" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_channel_reversal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_channel_reversal"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_channel_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_channel_num"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_time"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_watch_last"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_watch_last"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_force_high_quality"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_force_high_quality"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_boot_startup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_boot_startup"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_config_auto_load"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_config_auto_load"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif" />

    <com.thirutricks.tllplayer.ui.ModernToggleSwitch
        android:id="@+id/switch_channel_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height"
        android:text="@string/title_channel_check"
        android:textColor="@color/info_text_primary"
        android:textSize="@dimen/tv_text_size_medium"
        android:paddingStart="8dp"
        android:fontFamily="sans-serif" />

</LinearLayout>